-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.15.1
-
None
-
5d8f13bfd4 (qt-creator/qt-creator/8.0) 5d8f13bfd4 (qt-creator/qt-creator/master)
Consider this snippet:
QStringList list; it = list.cbegin();
If you place the cursor just after "it" and hit Alt+Return and select "Add Local Declaration", the code becomes
QStringList list; QList::const_iterator it = list.cbegin();
That's wrong. It should be
QList<QString>::const_iterator it = list.cbegin();